new matcher test (does not work for some reason)